--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "framer-motion": "^10.16.5",
+    "gsap": "^3.12.5",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
